# ai_language_agent

./: .dockerignore  .fastapicloudignore  Dockerfile  README.md  audioo.py  docker-compose.yml  documentation.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py  pyproject.toml  sreamlit_app.py  streamlit_app.py  test_pronunciation.py
app/api/: gaming.py  reading.py
app/models/: schemas.py
app/services/: AI_service.py  azure_pronunciation.py  german_voice_agent.py  voicelive_bridge.py
app/utils/: audio.py
docs/screenshots/: README.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  vite.config.ts
frontend/.github/: copilot-instructions.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AssessmentResult.tsx  AudioRecorder.tsx  AudioUploader.tsx  ConfigPanel.tsx  GermanVoiceChat.tsx  PronunciationView.tsx  Sidebar.tsx  TextInput.tsx
frontend/src/services/: api.ts  voiceLiveClient.ts
frontend/src/styles/: AssessmentResult.css  AudioRecorder.css  AudioUploader.css  ConfigPanel.css  GermanVoiceChat.css  Sidebar.css  TextInput.css
frontend/src/types/: index.ts
