[project]
name = "ai-language-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "azure-cognitiveservices-speech>=1.49.1",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]
