[project]
name = "ai-language-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "azure-cognitiveservices-speech>=1.49.1",
    "azure-ai-voicelive[aiohttp]",
    "azure-core",
    "azure-identity",
    "aiohttp",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pyaudio",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
    # Explicit so uvicorn can always serve the /api/voice/live WebSocket in the
    # container (otherwise WS support only rides in transitively).
    "websockets>=14",
    "python-multipart==0.0.28",
    "google-genai>=2.9.0",
]
